fix code smells (#1754)